[tool.poetry]
name = "Logo generator"
version = "1.0.0"
description = "Uses an AI create a good prompt to generate logo's using DALL-E. I made this for FourweekMBA so they have all the rights to the code."
authors = ["Jorik Loos - <gh[at]jorik.email"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.25.0"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"